# automl-api

./: .dockerignore  .env.example  .env.gpu.example  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  compose.gpu-direct.yaml  compose.gpu.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/postgres/: 001_rls_schema.sql
docs/: api-route-reference.md  api-usage.md  automl-api-design.md  complete-api-design.md  external-agent-integration.md  framework-backends.md  production-delivery.md  test-report-0.7.0.md
docs/evaluations/: api-first-disposition.md  api-first-gemini.md  api-first-packet.md  milestone-1-closure-disposition.md  milestone-1-closure-gemini.md  milestone-1-closure-packet.md  milestone-1-implementation-disposition.md  milestone-1-implementation-gemini.md  milestone-1-implementation-packet.md  milestone-2a-final-packet.md  milestone-2a-local-durable-disposition.md  phase-1-gemini.md  (+6 more)
openapi/: __init__.py  automl-agent-tools.yaml  automl-api.yaml
scripts/: generate_agent_openapi.py  package_release.py
tests/: __init__.py  conftest.py  helpers.py  test_agent_contract.py  test_agent_interface.py  test_api_end_to_end.py  test_auth_security.py  test_backend_registry.py  test_durable_api_end_to_end.py  test_ml_engine.py  test_openapi_contract.py  test_optional_backends.py  test_persistence.py  test_production_controls.py  test_release_metadata.py  test_release_packaging.py  test_runtime_limits.py  test_sdk.py  test_sdk_durable_end_to_end.py  test_sdk_transfers.py  test_storage_end_to_end.py  test_worker.py
(+26 files in other folders)
